; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rax.c_raxPrev.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rax.c_raxPrev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ENOMEM = common dso_local global i64 0, align 8
@errno = common dso_local global i64 0, align 8
@RAX_ITER_EOF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @raxPrev(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = call i32 @raxIteratorPrevStep(%struct.TYPE_4__* %4, i32 0)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i64, i64* @ENOMEM, align 8
  store i64 %8, i64* @errno, align 8
  store i32 0, i32* %2, align 4
  br label %18

9:                                                ; preds = %1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @RAX_ITER_EOF, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  store i64 0, i64* @errno, align 8
  store i32 0, i32* %2, align 4
  br label %18

17:                                               ; preds = %9
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %16, %7
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @raxIteratorPrevStep(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
